--- a/index.html
+++ b/index.html
@@ -3,37 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Ambika Keramagi</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Pacifico|Sacramento&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="topcontainer">
-      <img class="top-cloud"src="images/cloud.png" alt="cloud-picture">
+      <img class="top-cloud"src="cloud.png" alt="cloud-picture">
       <h1> I am Ambika </h1>
       <h2>I am a web developer</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain-img">
     </div>
     <div class="middlecontainer">
       <div class="profile">
-      <img class="image" src="images/ambika.jpg" alt="profile-picture">
+      <img class="image" src="ambika.jpg" alt="profile-picture">
       <h2>Hello.</h2>
       <p>I am coder, I ♥️ Tea, enthusiastic cycler</p>
-      <h3>I am a front-end web developer, looking for a good opportunity in front end</h3>
+      <h3>I am a front-end web developer, looking for a good opportunity in front end web development</h3>
     </div>
     <hr>
   <div class="skills">
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="chillies" src="images/chillies.png" alt="chilli-img">
+      <img class="chillies" src="chillies.png" alt="chilli-img">
       <h3>Javascript, Angular 2</h3>
       <p>since from my graduation i am very much facinated towards coding and desigining of web pages, whcih inspired me to choose my carrer into coding. Since then i gained a good knowledge of HTML5, CSS, Javascript, Json, Bootstrap</p>
     </div>
     <div class="skill-row">
-      <img class="computer" src="images/computer.png" alt="computer-img">
+      <img class="computer" src="computer.png" alt="computer-img">
       <h3>projects</h3>
-      <p>very much eager to work on real time project, if i got a opportunity , would love to showcase my skills in the project. I have worked as a program manager at omics international, Looking for good front end projects</p>
+      <p>very much eager to work on real time project, if i get an opportunity , would love to showcase my skills in the project. I have worked as a program manager at omics international, Looking for good front end projects</p>
     </div>
   </div>
   <hr>
