--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1> I am Ambika </h1>
       <h2>I am a web developer</h2>
       <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
+      <img src="mountain.png" alt="mountain-img">
     </div>
     <div class="middlecontainer">
       <div class="profile">
