--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="skill-row">
       <img class="chillies" src="chillies.png" alt="chilli-img">
       <h3>Javascript, Angular 2</h3>
-      <p>since from my graduation i am very much facinated towards coding and desigining of web pages, whcih inspired me to choose my carrer into coding. Since then i gained a good knowledge of HTML5, CSS, Javascript, Json, Bootstrap</p>
+      <p>since from my graduation i am very much facinated towards coding and desigining of web pages, whcih inspired me to choose my career into coding. Since then its my dream to be a web development. I am well versed in HTML5, CSS, Javascript, Json, Bootstrap</p>
     </div>
     <div class="skill-row">
       <img class="computer" src="computer.png" alt="computer-img">
